# SDL_UI-Exploration

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  entity_save.txt
include/: GENERIC_STACK.h  HighestBitDeBruijn.h  SDL_GlyphAtlasANSCII.h  SDL_UI.h  SDL_UIFontCache.h  SDL_UISpriteAtlas.h  SDL_UI_MemoryList.h  SDL_UI_StackTypeDefinitions.h  SDL_UI_TypeDefinitions.h
src/: SDL_GlyphAtlasANSCII.cpp  SDL_UI.cpp  SDL_UIFontCache.cpp  SDL_UISpriteAtlas.cpp  SDL_UI_FRectUtility.cpp  SDL_UI_FRectUtility.h  SDL_UI_MemoryList.cpp  main.cpp
